[Regression] Prevent ToC & language button in header from wrapping
Refactors the bottom border in the zebra update
so that it doesn't require flexwrap on the
`.vector-page-titlebar` element, which can cause the
PagTitlebar layout to break when the page title is
longer than one line.

The challenge with the underline in Zebra is that we
want to use padding to create the white background on the
content elements, but we *don't* want the underline
to stretch to edge of the box (which is what bottom-border
or box-shadow would produce), instead we want the
underline to only span the width of the content.

Bug: T335633

--- a/resources/skins.vector.styles/components/PageTitlebar.less
+++ b/resources/skins.vector.styles/components/PageTitlebar.less
@@ -1,9 +1,10 @@
 @import '../../common/variables.less';
 
 .vector-page-titlebar {
+	position: relative;
 	display: flex;
-	// Enabled bottom border via ::after element for Zebra update.
-	flex-wrap: wrap;
+	// T335633 - Although nowrap is default, setting it explicitly to prevent layout issues with ToC & languages button.
+	flex-wrap: nowrap;
 	// Ensure language button or indicators are positioned to the right even when the title is hidden
 	justify-content: flex-end;
 	// Use box-shadow instead of border to allow border collapsing between titlebar and toolbar
