--- a/resources/skins.vector.zebra.styles/layouts/screen.less
+++ b/resources/skins.vector.zebra.styles/layouts/screen.less
@@ -47,10 +47,18 @@ body {
 
 .vector-page-titlebar {
 	.mixin-clearfix();
-
+	box-shadow: none;
+	// Faux bottom border that stretches to the edges
+	// of the *content*, not the full width of the box.
 	&::after {
-		flex-basis: 100%;
-		border-bottom: 1px solid #a2a9b1;
+		content: '';
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left: @padding-horizontal-content-box;
+		right: @padding-horizontal-content-box;
+		height: 1px;
+		background-color: @border-color-base;
 	}
 }
 
