--- a/resources/skins.vector.zebra.styles/variables.less
+++ b/resources/skins.vector.zebra.styles/variables.less
@@ -106,7 +106,8 @@
 // Content boxes
 @border-radius-content-box: 4px;
 @border-color-content-box: #ececec;
-@padding-main-content-box: 30px 50px;
+@padding-vertical-content-box: 30px;
+@padding-horizontal-content-box: 50px;
 
 // Scroll Indicator
 @height-scroll-indicator: 30px;
